client/stylesheets/style.css
@font-face {
    font-family: pacifico;
    src: url(Pacifico.ttf);
}
* {
  font-family: Courier New;
}
.navbar-brand {
  font-family: pacifico;
  font-size: 60px;
}
.fa-sort-desc {
  margin-top: -25px;
}
.fa-sort-asc {
  margin-top: -2px;
  margin-right: -20px;
}
a {
  font-size: 18px;
}
.navbar {
  min-height: 10px;
}
article {
  display: flex;
}
.media {
  margin: 20px;
  width: 90%;
  margin: auto;
}
img {
  width: 150px;
  height: 150px;
}
form {
  margin: 20px;
}
.comment {
  margin-top: 20px;
}
.positive {
  color: green;
}
.negative {
  color: #911710;
}

.ng-hide-remove {
  transition: 0.5s ease all;
  opacity: 0;
}
.ng-hide-remove.ng-hide-remove-active {
  opacity: 1;
}
.ng-hide-add {
  transition: 0.5s ease all;
  opacity: 1;
}
.ng-hide-add.ng-hide-add-active {
  opacity: 0;
}
.ng-enter{
    transition: 0.5s ease all;
    opacity: 0;
}
.ng-enter.ng-enter-active{
    opacity: 1;
}
.ng-leave{
    transition: 0.5s ease all;
    opacity: 1;
}

.ng-leave.ng-leave-active{
    opacity: 0;
}

